objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>This is a process for Standard Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AnnualContractValue__c</fullName>
        <description>This stores the sum of all Annual Contract Value (ACV) on the Line products</description>
        <label>Annual Contract Value (ACV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualRecurringRevenue__c</fullName>
        <description>This stores the sum of all Annual Recurring Revenue (ARR) on the Line products</description>
        <label>Annual Recurring Revenue (ARR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChurnRate__c</fullName>
        <description>This stores the sum of all Churn Rates on the Line products</description>
        <label>Churn Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyRecurringRevenue__c</fullName>
        <description>This stores the sum of all Monthly Recurring Revenue (MRR) on the Line products</description>
        <label>Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <description>to be used in Forecasting. Rollup value of total Rebate Amount from OLIs, calculating via flow</description>
        <label>Rebate Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Forecast__c</fullName>
        <description>to be used in Forecasting</description>
        <formula>Amount - Rebate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalContractValue__c</fullName>
        <description>This stores the sum of all Total Contract Value (TCV) on the Line products</description>
        <label>Total Contract Value (TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <description>Overall Approval Status for this Opportunity</description>
        <inlineHelpText>Overall Approval Status for this Opportunity</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</description>
        <inlineHelpText>Used with Native Approvals to indicate the step in the approval process this Opportunity is in</inlineHelpText>
        <label>Approval Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</description>
        <inlineHelpText>Used with Native Approvers; indicates which Approver is responsible for approving the Opportunity.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__StepApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with Native Approvals; to indicate whether the step has been approved</description>
        <inlineHelpText>Used with Native Approvals; to indicate whether the step has been approved</inlineHelpText>
        <label>Step Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedDate__c</fullName>
        <description>Date when record was submitted for approval</description>
        <inlineHelpText>Date when record was submitted for approval</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User requesting approval for the Opportunity.</description>
        <inlineHelpText>User requesting approval for the Opportunity.</inlineHelpText>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubmittedUserOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Rebate_Forecast__c</columns>
        <columns>TotalContractValue__c</columns>
        <columns>AnnualContractValue__c</columns>
        <columns>AnnualRecurringRevenue__c</columns>
        <columns>MonthlyRecurringRevenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>startsWith</operation>
            <value>test opp</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Direct</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <description>This is a opportunity type for Direct Customers</description>
        <label>Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Indirect</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <description>This is a opportunity for Indirect Customers</description>
        <label>Indirect</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>